corrected typos in index.html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <!-- Script for day js -->
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <!-- Script tag for my custom js -->
-  <script src=./assets/script.js></script>
+  <script src=assets/script.js></script>
 </body>
 
 </html>
